chore: Sync changes Dec 28

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Agentic Test Platform Environment Variables
 
 # Database for test results storage
-DATABASE_URL=postgresql://user:password@localhost:5432/agentic_test_results
+DATABASE_URL=postgresql://user:password@localhost:5443/agentic_test_results
 
 # Anthropic API for intelligent test agents
 ANTHROPIC_API_KEY=sk-ant-your-key-here
@@ -45,3 +45,5 @@ ENABLE_DETAILED_LOGGING=true
 # Monitoring
 ENABLE_METRICS_EXPORT=true
 METRICS_EXPORT_PATH=./test-results
+
+PASSWORD=your_password_here
